# polygames

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements-cpu.txt  requirements-cuda.txt  requirements.txt  setup.py
.circleci/: Dockerfile  checkout-without-force.sh  config.yml  requirements.txt
docker/: README.md  build-all.sh  build-ci.sh
docker-dev/: Dockerfile  authorized_keys  requirements.txt
docker/ci-base/: Dockerfile
docker/ci-relwithdebinfo/: Dockerfile
docker/ci-sanitize/: Dockerfile
docker/devbox/: Dockerfile
docker/runner/: Dockerfile
experiments/: gpu_memory_tracking.sh  memory_tracking.sh
experiments/neural_mcts/: run_like.py
experiments/neural_mcts/eval_scripts/: create_eval_commands_from_config.py  create_eval_commands_from_dir.py  generate_scores.py  make_many_plots.py  old_generate_scores.py  old_make_plots.py  run_against_many_mcts.py  run_eval_commands_from_files.py  run_experiments_from_files.py  utils.py
experiments/neural_mcts/eval_scripts/plotting/: make_plots.py  utils.py
experiments/neural_mcts/train_scripts/: run.sh  run_like.py
experiments/pure_mcts/: config.yaml  create_experiments_from_config.py  mcts_scaling_laws.py  results.txt  run_experiments_from_files.py  run_given_experiment.py  run_pure_mcts.py  utils.py
littlegolem/: play_littlegolem.py
pypolygames/: __init__.py  __main__.py  check_pure_mcts.py  convert.py  draw_model.py  env_creation_helpers.py  evaluation.py  human.py  params.py  pure_mcts.py  test_pure_mcts.py  training.py  weight_init.py
pypolygames/model_zoo/: amazons_model.py  connect4_benchmark_model.py  deep_conv_conv_logit_model.py  deep_conv_fc_logit_model.py  generic_model.py  loss.py  nano_conv_logit_model.py  nano_fc_logit_model.py  res_conv_conv_logit_model.py  res_conv_conv_logit_pool_model.py  res_conv_conv_logit_pool_model_v2.py  res_conv_fc_logit_model.py  u_conv_conv_logit_model.py  u_conv_fc_logit_model.py
pypolygames/tests/: __init__.py  test_interactions.py  test_mcts.py  test_params.py  test_zoo.py
pypolygames/utils/: assert_utils.py  checkpoint.py  command_history.py  helpers.py  listings.py  logger.py  multi_counter.py  plotter.py  restrack.py  result.py  test_listings.py
src/: CMakeLists.txt
src/common/: thread_id.h  threads.cc  threads.h
src/core/: actor.h  actor_player.h  forward_player.h  game.cc  game.h  human_player.h  model_manager.cc  pybind.cc  state.h  test_state.cc  utils.h
src/distributed/: CMakeLists.txt  distributed.h  network.cc  rdma.h
src/games/: CMakeLists.txt  amazons.cc  block_go.h  breakthrough_state.h  chess.h  chinesecheckers.cc  chinesecheckers.h  connect6_state.h  connectfour.h  diceshogi.h  diceshogi_state.h  einstein.h  game_base.h  gomoku_swap2.cc  havannah_state.h  hex.h  hex_state.h  kyotoshogi_state.h  mastermind_state.h  minesweeper_state.h  minishogi.h  mnkgame.h  nogo_action.h  nogo_bitboard.h  nogo_game.cc  nogo_game.h  nogo_state.h  nogo_zestate.h  othello.h  othello_opt.cc  outeropengomoku_new.h  surakarta_state.h  tristan_nogo.h  tristannogo_state.h  yinsh.cc  yinsh.h
src/games/ludii/: ludii_game_wrapper.cc  ludii_state_wrapper.cc
src/games/minesweeper_csp_vkms/: CMakeLists.txt  SolutionSetSampler.h
src/games/weakschur/: weakschur_state.h
src/mcts/: CMakeLists.txt  actor.h  mcts.cc  mcts.h  node.cc  node.h  old_test.cc  pybind.cc  pybind.h  storage.cc  storage.h  test.cc  types.h  utils.h
src/tube/: CMakeLists.txt  setup.py
src/tube/pytube/: data_channel_manager.py  test_dc_manager.py  utils.py
src/tube/src_cpp/: pybind.cc  pybind.h
tests/: CMakeLists.txt  connectfour-tests.cc  havannah-state-tests.cc  havannah-tests.cc  hex-state-tests.cc  test_mcts.cc  test_state.cc  utils.h
tests/python/: test_replay_buffer.py
valgrind/: dlopen.supp  lsan-bash.supp
